fix: улучшен CORS (AllowedOriginPatterns + credentials), добавлена обработка закрытия консоли в батниках